Changes made in 24.2.01 release of Reporting Metadata Studio